--- a/WS/nbproject/private/private.properties
+++ b/WS/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Brenda\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3535431927.properties
+deploy.ant.properties.file=C:\\Users\\Jeremy\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3827784649.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Brenda/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Brenda/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Brenda\\GlassFish_Server\\glassfish;C:\\Users\\Brenda\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Brenda/GlassFish_Server
+j2ee.server.domain=D:/Program/glassfish-4.1/glassfish/domains/domain1
+j2ee.server.home=D:/Program/glassfish-4.1/glassfish
+j2ee.server.instance=[D:\\Program\\glassfish-4.1\\glassfish;D:\\Program\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=D:/Program/glassfish-4.1
 selected.browser=SL[/Browsers/webviewBrowser
-user.properties.file=C:\\Users\\Brenda\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Jeremy\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
